--- a/css/base.css
+++ b/css/base.css
@@ -46,9 +46,15 @@ img {
 	position: relative;
 }
 
+.gallery-columns-1 {
+}
+
 .gallery-columns-1 > * {
-    width: 100%;
-    float: none;
+/*     width: 100%; */
+/*     float: none; */
+	display: inline-block;
+	width: auto;
+	float: none;
 }
 
 @media (min-width:600px) {
