--- a/css/main.css
+++ b/css/main.css
@@ -59,12 +59,16 @@ img {
 	color: #555;
 }
 
-#menu ul {
-	background: #d3d3d3;
+@media (min-width:800px) {
+		
+	#menu .menu > li {
+		text-transform: uppercase;
+		font-weight: bold;
+		font-size: 12px;
+	}
+
 }
 
-#menu a {
-}
 
 
 
@@ -76,7 +80,12 @@ img {
 }
 
 #content > .row {
-/* 	background: rgba(255,0,0,0.1); */
+}
+
+#content .page-header {
+	background: rgba(255,255,255,0.5);
+	padding: 3em 0;
+	margin-bottom: 3em;
 }
 
 
@@ -100,7 +109,7 @@ img {
 
 .post-gallery {
 /* 	background: rgba(0,255,0,0.1); */
-	margin: -1em;
+	margin: 0 -1em;
 }
 
 .post-gallery .post {
@@ -116,37 +125,49 @@ img {
 	margin-bottom: 0.75em;
 }
 
-.slat:before, .slat:after {
-	content: "";
-	display: table;
-	clear: both;
+.post-gallery .post .title {
+	text-align: center;
+	color: #999;
+	font-size: 12px;
 }
 
-.slat > :nth-child(1) {
-	box-shadow: 0 0 1em rgba(0,0,0,0.1);
+
+
+/* slats
+------------------------------------------ */
+
+.slat {
+/*	box-shadow: inset 0 0 0 1px rgba( 255,0,0,0.15); */
+	overflow: hidden;
 }
 
-@media (min-width:720px) {
+.slat + .slat {
+	margin-top: 5em;
+}
 
-	.slat > :nth-child(1) {
-		float: left;
-		max-width: 50%;
+.slat > header,
+.slat > figure {
+	float: left;
+	margin-right: 4%;
+	max-width: 50%;
+}
+
+.slat > article {
+	overflow: hidden;
+	text-align: left;
+}
+
+@media ( max-width:720px ) {
+
+	.slat > figure {
+		float: none;
+		max-width: none;
+		margin-bottom: 1em;
 	}
 	
-	.slat > :nth-child(2) {
-		overflow: hidden;
-		padding-left: 4em;
-	}
-
 }
 
-@media (max-width:720px) {
-	
-	.slat > :nth-child(1) {
-		margin-bottom: 3em;
-	}
-	
-}
+
 
 
 
