--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,11 @@ img {
 	margin-bottom: 3em;
 }
 
+#content .content {
+	line-height: 1.75;
+	max-width: 52em;
+}
+
 
 
 /* post styles 
@@ -97,10 +102,6 @@ img {
 	background: white;
 	padding: 3em;	
 	text-align: left;
-}
-
-.post .content {
-	line-height: 1.75;
 }
 
 .post .meta {
@@ -117,6 +118,11 @@ img {
 	width: 200px;
 	vertical-align: middle;
 	margin: 1em;
+	padding: 0;
+}
+
+.post-gallery .post a {
+	display: block;
 	padding: 1em;
 	background: #fff;
 }
@@ -131,13 +137,16 @@ img {
 	font-size: 12px;
 }
 
+.post figure img {
+	box-shadow: 0 0 1px rgba(0,0,0,0.4);
+}
+
 
 
 /* slats
 ------------------------------------------ */
 
 .slat {
-/*	box-shadow: inset 0 0 0 1px rgba( 255,0,0,0.15); */
 	overflow: hidden;
 }
 
